src/objects/Client_Tag__c.object
<CustomObject>
    <description>Used to tag Clients with one or more tags used for Billing and/or Reporting.</description>
    <fields>
        <fullName>Client_Tag_Name__c</fullName>
        <label>Client Tag Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UsedforBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used for Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UsedforReporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used for Reporting</label>
        <type>Checkbox</type>
    </fields>
    <label>Client Tag</label>
    <listViews>
        <fullName>Client_Tags</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>UsedforBilling__c</columns>
        <columns>UsedforReporting__c</columns>
        <filterScope>Everything</filterScope>
        <label>Client Tags</label>
    </listViews>
    <nameField>
        <label>Client Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>